--- a/figuras.html
+++ b/figuras.html
@@ -9,11 +9,49 @@
 
 </head>
 <body>
-    <main>
+    <header>
         <h1>
             Figuras Geometricas
         </h1>
-        <script src="./fijuras.js"></script>
+        <p>primearas practicas con Js y html</p>
+    </header>
+    <main>
+        <section>
+            <script src="./fijuras.js"></script>
+            <h2> Calcula el area y perimetro de un cuadrado</h2>
+            <form action="">
+                <label for="inputCuadrado">
+                    escribe cuanto mide cada lado de tu cuadrado
+                </label>
+                <input id="inputCuadrado"type="number" >
+                <button type="button" onclick="calcularPerimetroCuadrado()">
+                    calcular el perimetro
+                </button>
+                <button type="button" onclick="calcularAreaCuadrado()">
+                    calcular el area
+                </button>
+            </form>
+        </section>
+        <section>
+            <script src="./fijuras.js"></script>
+            <h2>Calcula el area de un triangulo</h2>
+            <form action="">
+                <label for="triangulo">
+                    escribe cuando mide cada lado de tu cuadrado
+                </label>
+                <input type="number" name="triangulo" id="inputtriangulo">
+                <button type="button" onclick="calcularPerimetroTriangulo()">
+                    calcular el perimetro
+                </button>
+                <button type="button" onclick="calcularAreaTriangulo()"> 
+                    calcular el area
+                </button>
+            </form>
+        </section>
+        <section>
+
+        </section>
+        
     </main>
 </body>
 </html>
