--- a/MMM/index.html
+++ b/MMM/index.html
@@ -8,9 +8,17 @@
 </head>
 <body>
     <main>
-        <h2>Promedio</h2>
+        <section>
+            <h2>Promedio</h2>
 
-        <script src="./promedio.js"></script>
+            <script src="./promedio.js"></script>
+        </section>
+        <section>
+            <h2>Mediana</h2>
+
+            <script src="./mediana.js"></script>
+        </section>
+
     </main>
 </body>
 </html>
