--- a/MMM/index.html
+++ b/MMM/index.html
@@ -18,7 +18,11 @@
 
             <script src="./mediana.js"></script>
         </section>
+        <section>
+            <h2>Moda</h2>
 
+            <script src="moda.js"></script>
+        </section>
     </main>
 </body>
 </html>
