realizando el reto de crear una funcion con otro tipo de promedio que es el de media armonica

--- a/MMM/index.html
+++ b/MMM/index.html
@@ -23,6 +23,7 @@
 
             <script src="moda.js"></script>
         </section>
+        <script src="./mediaArmonica.js"></script>
     </main>
 </body>
 </html>
