--- a/AnalisisSalarial/index.html
+++ b/AnalisisSalarial/index.html
@@ -10,7 +10,29 @@
 </head>
 <body>
     <header>
-        
+        <section class="header-section">
+            <h1 class=" header-title">analisis salarial y calculo financiero </h1>
+        </section>
+        <section class="header-section-nav">
+            <nav class="header-nav">
+                <ul class="header-nav-ul">
+                    <li class="header-nav-li"><a href="">calculo financiero</a></li>
+                    <li class="header-nav-li"><a href="">analisis salarial</a></li>
+                </ul>
+            </nav>
+        </section>
     </header>
+    <main>
+        <section class="main-section">
+            <div class="main-section-container1">
+                <input type="number" id="main-section-input">
+                <button>interes simple</button>
+                <button>interes compuesto</button>
+            </div>
+            <div class="main-section-container2">
+                <p>Total</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
